added Kost method
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/EmpiricalBrownsMethod@115112 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
 VERSION 0.99.0
 ------------------------
    o Package released
+VERSION 0.99.1
+------------------------
+  o Spelling corrected
+VERSION 0.99.2
+-----------------------
+  o Added Kost's Method
+  
